Privacy settings: location section is empty, despite location services being used
The Location Services section says "No Applications Have Asked for Location Access", despite multiple apps using my location. (I suspect that the same would be true for the Camera and Microphone section, but I'm unable to test that currently.) This isn't a good look for us, and I'd imagine that a lot of users will be asking what the point of the privacy settings are.
Potential routes out of this could be:
- allow locking down location services so it can be only used through the portal
- list non-sandboxed apps, to say "these aren't secure and may by using location services without permission"
- if an app escapes the sandbox to access location services, maybe we could flag this at install time, and show it in the privacy settings somehow
Outside of these steps, we should really really ensure that our own core apps use the portals properly.