location: Fix permission store table/id

Updates to match
https://gitlab.gnome.org/GNOME/gnome-shell/-/blob/master/js/ui/status/location.js

Should fix
https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/885.